# caputre-display

./: README.md  configure.ac
src/: Makefile.am  buffers.c  buffers.h  capture_display.c  common.h  format.c  format.h  image.c  image.h  io.h  iomap.c  iomap.h  kms.c  kms.h  mlc.c  mlc.h
